--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">PodPlay</string>
     <string name="search_hint">Enter podcast search</string>
+    <string name="subscribe">Subscribe</string>
     <string name="search">Search</string>
 </resources>
